[package]
name = "wita"
version = "0.9.3"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
keywords = ["windows"]
categories = ["gui"]
description = "A window library in Rust for Windows"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/LNSEAB/wita"
documentation = "https://docs.rs/wita"

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc"]
default-target = "x86_64-pc-windows-msvc"
all-featurse = true

[features]
raw_input = []

[dependencies]
serde = { version = "1.0.125", optional = true, features = ["derive"] }
num = "0.4.0"
raw-window-handle = "0.3.3"
log = "0.4.14"
windows = "0.9.1"

[dev-dependencies]
anyhow = "1.0.40"
windows = "0.9.1"
serde_json = "1.0.64"

[build-dependencies]
windows = "0.9.1"
